#17 Fix a gap issue space between list items in experiences section

--- a/dev/assets/css/home.css
+++ b/dev/assets/css/home.css
@@ -102,6 +102,7 @@
 
 .experiences .experiences-list {
     display: flex;
+    gap: 10px;
     width: 100%;
     padding-block: 10px;
 }
